Add dec2025 journal entry
Includes a fix for content navigation bar

--- a/journal.html
+++ b/journal.html
@@ -49,19 +49,112 @@
 			<h2 style="text-align: center;">journal</h2>
 			<div id="borderimg1" class="sidenav">
 				<span class="journal_year_span" style="text-align: center; background-color: gainsboro; display: block;"><b>-2025-</b></span>
-				<a class="active" href="#may2025" id="may2025nav" onclick="navBarActive('may2025nav')">may 2025</a>
+				<a class="active" href="#dec2025" id="dec2025nav" onclick="navBarActive('dec2025nav')">dec 2025</a>
+				<a href="#may2025" id="may2025nav" onclick="navBarActive('may2025nav')">may 2025</a>
 				<span class="journal_year_span" style="text-align: center; background-color: gainsboro; display: block;"><b>-2024-</b></span>
 				<a href="#aug2024" id="aug2024nav" onclick="navBarActive('aug2024nav')">aug 2024</a>
 				<a href="#jul2024" id="jul2024nav" onclick="navBarActive('jul2024nav')">jul 2024</a>
 				<a href="#may2024" id="may2024nav" onclick="navBarActive('may2024nav')">may 2024</a>
 				<a href="#apr2024" id="apr2024nav" onclick="navBarActive('apr2024nav')">apr 2024</a>
-				<!-- <a href="#mar2024" id="mar2024nav" onclick="navBarActive('mar2024nav')">mar 2024</a>
-				<a href="#feb2024" id="feb2024nav" onclick="navBarActive('feb2024nav')">feb 2024</a>
-				<a href="#jan2024" id="jan2024nav" onclick="navBarActive('jan2024nav')">jan 2024</a> -->
 				<span class="journal_year_span" style="text-align: center; background-color: gainsboro; display: block;"><b>-2023-</b></span>
 				<a href="#dec2023" id="dec2023nav" onclick="navBarActive('dec2023nav')">dec 2023</a>
 			</div>
 			<div class="main">
+				<!-- new article -->
+				<article id="dec2025">
+					<!-- article title -->
+					<h3 style="text-align: left;">i use ████, btw (dec 2025)</h3>
+					<div class="flex-container">
+						<div class="leftside" style="text-align: left;">
+							<p style="font-size: 90%; letter-spacing: -0.1px;">
+								<span style="display: inline; font-size: 70%;">
+									<i>
+										i initially wrote this piece at the end of 2025, but held off on publishing it because i felt there was more for me to learn before putting my opinion on paper.
+										<br>while i <b>have</b> learned more, instead of revising my initial impressions, i thought it would be more fun to just redact some sections.
+									</i>
+								</span>
+								<br>
+								<br>
+								in any field, any hobby, any job, some of the most exhausting people are <u><i>elitists</i></u>. these people have spent either way too much or (<a href="https://en.wikipedia.org/wiki/Dunning%E2%80%93Kruger_effect">usually</a>) way too little time within their respective niche, but somehow, someway think they're part of the group that's doing it "right", and that anyone who deviates from their preconceived notion of "right" is doing it "wrong".
+								<br>the worst are the ones who can't keep their mouth shut about it.
+								<br>
+								<br>despite this, sometimes these elitist philosophies are born from a genuine feeling that they're doing <i>something</i> right. it's rare that someone gets on their high horse about shovelling █████ ██████ into their ██████ ████ (though, i won't pretend i know enough to rule that out). often, there's <i>some</i> kind of worth in trying to look past what they say and in seeing what's so worth their vitriolic defense.
+								<br><span style="text-align: center;">so... ████.</span>
+								<br>████ (btw) has gained an appropriate reputation for being the elitist's █████ ██████ of choice. it's stripped down, diy, clearly meant for the most <b>hardcore</b> of █████ users. there's no handholding, no auto-██████ installs, you don't even get a ███████ ███████████, just a ████████. <b>hardcore!1!</b>, right? in fact, using ████ has become such a symbol of "hardcore"-ness that there's even a <a href="https://en.wikipedia.org/wiki/Shibboleth">shibboleth</a> surrounding it: "i use ████, btw".
+								<br>
+								<br>because, assumedly, █████ users thrive on pain, it's somewhat natural that the most difficult █████ ██████ to use would become the one that separates the adults from the children, the one that tests whether you have what it takes to be a "real" █████ user, who "really" knows how to "really" use █████. or something. i'll be honest with you: despite consistently using various █████ ███████ for years (primarily ██████ and ██████-based), i don't even know what the real difference between most ███████ is. it just seems like some give you more stuff by default and some give you less. "maybe ████ is different!" i thought, "maybe i'll finally just <i>get</i> it!"
+								<br>
+								<br><span style="text-align: center;">so, i buckled up for what was surely to be a fierce battle. me vs. ███ ████████.
+									<br>
+									<br><b>man vs. the machine.</b>
+								</span>
+								<br>including the time it took me to find a flash drive, installing ████ took me less than an hour. quite literally, ███████ 11 installations have taken me longer.
+								<br>the process is incredibly straight forward, no thanks to the official guide. here, i'll even detail it right now for you:
+							</p>
+							<ol style="text-align: left; font-size: 90%">
+								<li style="display: list-item;">flash the █████ onto a ███ █████ (literally one button with something like balena etcher)</li> 
+								<li style="display: list-item;">plug the ███ █████ into the target ███████ and boot into it</li> 
+								<li style="display: list-item;">create a ████ partition (3gb if you're crazy like me) and a ████ partition (everything else)</li>
+								<li style="display: list-item;">install some ██████████ (grub) onto the ████ partition and install ████ onto the ████ partition</li>
+							</ol>
+							<p style="font-size: 90%; letter-spacing: -0.1px;">
+								that's literally it. at its core, installing ████ is no more difficult than installing anything else. i've had significantly more trouble installing laravel than this. so, why do so many people say it's so difficult?
+							</p>
+						</div>
+					</div>
+					<div class="flex-container">
+						<div class="leftside" style="text-align: left;">
+							<p style="font-size: 90%; letter-spacing: -0.1px;">
+								in my opinion, there are a few reasons. the official guide is <u>dense</u> with largely extraneous information, making it incredibly easy to ignore footnotes that <i>do</i> apply to you, simply because all the other ones that look identical don't.
+								<br>
+								<br>the guide also frequently hands critical information off to very technical documentation. for example, the █████ ████ that ███ ████ to ████████ a ███████ ██████ of ████ ████ and ████ to ██████ ███ on ███ ████ ███████ █████ as ████████ ████ about █████████ ████████ ███████████ is █████ and ███████. additionally, ███████ ███████, so...
+								<br>
+								<br>as another example, the ██████████ step is 2 sentences and directs the reader to not only another incredibly dense comparison table, but then to follow yet <i>another</i> link to the chosen ██████████'s dedicated page to find out how to install it. a self-described installation guide should <b>not</b> require you to go to <b>two completely separate pages</b> just to complete one incredibly important step, especially when those two separate pages are just as self-aggrandizing in their communication of information as the guide is itself.
+								<br>
+								<br>in fact, i don't even have to imagine this as a possibility. this <i>really</i> happened to me. i installed grub to my ████ partition, installed ████ to my ████ partition, and then rebooted, just to find that grub was missing its configuration file that tells it what the hell is going on. you know why i didn't have that config file? because generating the config file is <b>halfway through a paragraph two full sections away</b> from the installation step. i'm not being unreasonable, <b>this is bad <i>by design</i></b>.
+								<br>
+								<br>plainly, if you're like me and you miss this instruction that's buried <i>ages</i> away from the main content, on a completely different page, two degrees removed from the install guide <i>while you are just trying to complete the most basic task of installing</i>, the most efficient way to get back on track is to wipe your drive and start over. it is quicker and simpler to go scorched earth than to try salvaging this.
+								<br>
+								<br>this isn't difficult, there's no challenge here, there's no lesson being learned, this is simply bad documentation practices. furthermore, this particular example isn't even evidence of ████ being difficult to install. grub has nothing to do with ████! it's completely independent! you can use grub as a ██████████ for a bunch of different ███████ and operating systems! the <i>only</i> reason i got tripped up is because of ████'s user-hostile, overbearing, jargon filled documentation.
+								<br>
+								<br>these aren't the only places where the documentation fails. one of the biggest sources of confusion is how overly verbose it is in some ways, and how completely tight-lipped it is in other, which is ironic as the top of the installation guide claims to be "concise". the guide spends a solid chunk of time discussing partitioning schemes, and even gives some examples, which is a good thing, but completely flounders in providing the same attention to the essential packages, a daunting process that trips up a lot of people.
+								<br>
+								<br>what are the essential packages? oh, i'm so glad you asked. they're pieces of software, packaged together, that are essential for your computer to work. i don't mean essential as in, "oh it makes the computer a bit snappier!", i mean essential as in "this is the operating system and fundamental security patches for your hardware".
+								<br>
+								<br>like, i <i>get</i> that not everyone has a desire to install packages that aren't necessary for their use cases. in fact, that was the whole reason i wanted to install vanilla ████ instead of █████████os or █████os. i wanted to install only what i use, and not have to spend time uninstalling kitty or alacritty or emacs or nano or whatever. yet, it's probably counterintuitive for <i>most</i> people during the installation of ████, the base package could be totally omitted. like, dude, the base package <i>is</i> ████. why isn't it implicitly flagged as a dependency when you run ████████ or something? i cannot think of a single good reason why i would reading the ████ installation guide without intending to install ████.
+								<br>
+								<br>and, if you're going to give a bullet point list of packages that might be good to install, RAID/LVM packages should <i>not</i> be third on the list. if you're running RAID or LVM, you <i>know</i> that you'll need to do some configuration to get that working. it absolutely should not a higher priority than a console text editor! honestly, if i didn't know any better, i'd read that list, see that they're talking about RAID and immediately assume the rest of the list is just as unapplicable to me, leaving me without a text editor to do literally anything.
+								<br>
+								<br><b>i'm not done.</b>
+								<br>
+								<br><b>1.</b> ████-chroot is literally never explained, and the hyperlink directs to a general "change root" doc instead of the ████-chroot subsection. oh, and don't mix the two up, because chroot just doesn't work, except for the times when it does.
+								<br><b>2.</b> the "time" subsection contains the phrase, "for human convenience, set the time zone" as if there's literally any other life form's convenience to be considered in a █████ installation guide.
+								<br><b>3.</b> the █████████ subsection should be a footnote.
+								<br><b>4.</b> any time a text editor is needed, it's not even mentioned (for example, setting up locales, keymaps, and your computer's hostname).
+								<br>i could go on, but it's baffling that there are so many oversights in one single document.
+								<br>
+								<br>these things might be minor to you and me, but they're critical for people who are enthusiastic to learn a new skill in their limited free time, but are met with unnecessary barriers in terms of prerequisite knowledge. people should not feel discouraged from trying new things simply because those "in the know" are too much of a ███████ to be better.
+								<br>
+								<br><span style="text-align: center;">can you believe this isn't even my biggest gripe?</span>
+								<br>the documentation might be garbage, but a lot of documentation is pretty garbage (i'm looking at you, █████████). that doesn't necessarily earn ████ the reputation it's gained. my biggest gripe is with the ████ community.
+								<br>
+								<br>the ████ community is, as a whole, openly hostile to newcomers, and this is reflected everywhere. from reddit posts, to forum threads, to youtube comments, to discord messages, i've never seen "RTFM" thrown around so casually by people who don't even realize how dogshit, incomplete, or misleading the manual is. it seems to be completely inconceivable to these people that maybe reading the manual doesn't fix every problem, or that maybe the manual isn't always available in everyone's preferred language, or any other possibility under the sun.
+								<br>
+								<br>if you spend even a fraction of your time telling someone to RTFM instead of allowing them to take the risk of asking a question, <b>you are part of the problem</b>, and when inevitably your favorite project becomes an unmaintainable mess and no one is left to pick up the pieces, i hope you remember how needlessly isolating and hostile you were. <b>RTFM is an approach, not an answer</b>. truly, i'm very happy that you overcame the evidently personal hurdle of reading documentation, but not everyone struggles with that, and if you're not going to provide a real answer, then move along and let someone else handle it.
+								<br>
+								<br>████ isn't difficult, but it's full of people who want you to think it is, and maybe that's because it's all they have. in-groups can feel like a safety for many, but they can just as easily inhibit one's ability to empathize with those on the outside. if you genuinely get enjoyment from something, you should want to share in that enjoyment with others. if that's too much for you, that's okay - you don't need to be on the front lines, but it's not your job to educate people, so don't act like you're not being paid enough for it.
+							</p>
+						</div>
+						<div class="rightside" style="display: flex; text-align: center; flex-direction: column; justify-content: space-between; align-items: center;">
+							<figure>
+								<img class="hoverZoomImage borderimg1class" src="assets/grub_arch-dither.jpg" style="float: right; position: relative; width: 40vmin; border: 10px solid darkgrey; outline-style: dashed; outline-color: lightgrey; outline-width: 4px; outline-offset: -5px;" onmousemove="zoom(event)" onmouseleave="resetZoom(event)">
+							</figure>
+							<figure>
+								<img class="hoverZoomImage borderimg1class" src="assets/rtfm-dither.jpg" style="float: right; position: relative; width: 60vmin; border: 10px solid darkgrey; outline-style: dashed; outline-color: lightgrey; outline-width: 4px; outline-offset: -5px;" onmousemove="zoom(event)" onmouseleave="resetZoom(event)">
+							</figure>
+						</div>
+					</div>
+				</article>
 				<!-- new article -->
 				<article id="may2025">
 					<!-- article title -->
@@ -479,13 +572,20 @@
 
 </body>
 </html>
+<style>
+	@media only screen and (max-width: 800px){
+		ol {
+			font-size: 175% !important;
+		}
+	}
+</style>
 <script>
 	// pls dont criticize my variable names. i'm a python programmer, javascript scares me -_-
 	// also if you're reading this, please understand that i spent countless hours on this script. 
 
 	// each month for the articles are listed here in reverse chronological order (so that i=0 is always the most recent article)
 	// when a new article is published, please add the month and year here:
-	const current_articles = ['may2025', 'aug2024', 'jul2024', 'may2024', 'apr2024', 'dec2023'];
+	const current_articles = ['dec2025', 'may2025', 'aug2024', 'jul2024', 'may2024', 'apr2024', 'dec2023'];
 
 	// most recent article is set to be the default:
 	var previousMonthNav = document.getElementById(current_articles[0].concat('nav'));
@@ -495,8 +595,9 @@
 
 	let callback = (entries, observer) => {
 		entries.forEach((entry) => {
+			// console.log(entry.target.id + ' is intersecting: ' + entry.isIntersecting);
 			if (entry.isIntersecting) {
-				navBarActive(String(entry.target.id).concat('nav'));
+				navBarActive(String(entry.target.id).concat('nav'));;
 			}
 			clientDeviceWidth = (window.innerWidth > 0) ? window.innerWidth : screen.width;
 		});
@@ -513,7 +614,10 @@
 		let observer;
 
 		// threshold of the observer is relative to the device width - generally ensures that the movement between categories is consistent between devices. 
-		let myThreshold = clientDeviceWidth * 0.0004;
+		// let myThreshold = clientDeviceWidth * 0.0004;
+		let myThreshold = clientDeviceWidth * 0.0001; // dear god forgive me
+		// console.log('client device width: ' + clientDeviceWidth);
+		// console.log('my threshold: ' + myThreshold);
 		let options = {
 			root: document.querySelector('#scrollArea'),
 			rootMargin: '0px',
@@ -551,6 +655,19 @@
 		}
 		ditherButton.onclick = backToOriginal;
 	}
+
+	function zoom(e) {
+        var zoomer = e.currentTarget;
+        e.offsetX ? offsetX = e.offsetX : offsetX = e.touches[0].pageX;
+        e.offsetY ? offsetY = e.offsetY : offsetY = e.touches[0].pageX;
+        x = offsetX/zoomer.offsetWidth*100;
+        y = offsetY/zoomer.offsetHeight*100;
+        zoomer.style.objectPosition = x + '%' + y + '%';
+    }
+    function resetZoom(e) {
+        var zoomer = e.currentTarget;
+        zoomer.style.objectPosition = 50 + '%' + 50 + '%';
+    }
 
 	let str_stored_theme_key = sessionStorage.getItem("selected_theme_key");
 	setTheme(str_stored_theme_key, {r:142,g:142,b:142,a:255}, {r:100,g:200,b:150,a:0.25});
