--- a/projects.html
+++ b/projects.html
@@ -53,6 +53,31 @@
 			<br>
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey; flex-flow: row;'>
 				<div class='leftside'>
+					<img src='assets/ggamir-icon-dither.jpg' class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
+					<p style='line-height: 0.25;'>ggamir</p>
+					<p style='line-height: 1.0;'><small><i>non-homonymous with <a href="https://en.wiktionary.org/wiki/Artemisian">artemisian</a>.</i></small></p>
+				</div>
+				<div class='rightside'>
+					<h2><a href='projects/ggamir.html'>ggamir (jan 2026)</a></h2>
+					<p>definitely the second useful thing i've ever done.</p>
+					<br>
+					<p style='font-size: 80%;'>
+						the touhou reference will live on.
+						<br>with or without my forethought.
+						<br>oh, right, uh, this one, uh...
+						<br>this one analyzes mono irs.
+					</p>
+					<br>
+					<p style="line-height: 0.25;">tools:</p>
+					<p style='font-size: 90%;'><a href="https://www.python.org/">python</a>, my brain.
+						<br>libraries: <a href="https://numpy.org/">numpy</a>, <a href="https://matplotlib.org/">matplotlib</a>, <a href="https://pypi.org/project/soundfile/">soundfile</a>, <a href="https://docs.python.org/3/library/tkinter.html">tkinter</a>, <a href="https://www.pygame.org/">pygame</a>.
+					</p>
+				</div>
+			</div>
+			<!-- entry -->
+			<br>
+			<div class='flex-container' style='border-bottom: 2px dashed lightgrey; flex-flow: row;'>
+				<div class='leftside'>
 					<img src='assets/image-diff-dither.png' class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
 					<p style='line-height: 0.25;'>image-diff.py</p>
 					<p style='line-height: 1.0;'><small><i>this ain't my first rodeo.</i></small></p>
@@ -68,7 +93,7 @@
 					</p>
 					<br>
 					<p style="line-height: 0.25;">tools:</p>
-					<p style='font-size: 90%;'>python, pillow.
+					<p style='font-size: 90%;'><a href="https://www.python.org/">python</a>, <a href="https://pypi.org/project/pillow/">pillow</a>.
 					</p>
 				</div>
 			</div>
@@ -99,7 +124,7 @@
 			<br>
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
-					<img src='assets/gghsf_main-dither.jpg' class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
+					<img src='assets/gghsf-dither.jpg' class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
 					<p style='line-height: 0.25;'>ggh&sf</p>
 					<p style='line-height: 1.0;'><small><i>just like ai, if ai stood for "analyzing i-hrtfs".</i></small></p>
 				</div>
@@ -116,8 +141,8 @@
 					</p>
 					<br>
 					<p style="line-height: 0.25;">tools:</p>
-					<p style='font-size: 90%;'>python, my brain.
-						<br>libraries: numpy, matplotlib, soundfile, python-sofa, librosa, scipy, IPython, tkinter, pygame, pyinstaller, PyQt6.
+					<p style='font-size: 90%;'><a href="https://www.python.org/">python</a>, my brain.
+						<br>libraries: <a href="https://numpy.org/">numpy</a>, <a href="https://matplotlib.org/">matplotlib</a>, <a href="https://pypi.org/project/soundfile/">soundfile</a>, <a href="https://pypi.org/project/python-sofa/#description">python-sofa</a>, <a href="https://librosa.org/">librosa</a>, <a href="https://scipy.org/">scipy</a>, <a href="https://ipython.org/">IPython</a>, <a href="https://docs.python.org/3/library/tkinter.html">tkinter</a>, <a href="https://www.pygame.org/">pygame</a>.
 					</p>
 				</div>
 			</div>
@@ -137,7 +162,7 @@
 					</p>
 					<br>
 					<p style="line-height: 0.25;">tools:</p>
-					<p style='font-size: 90%;'><a href="https://www.pjrc.com/store/teensy41.html" target="_blank">teensy</a>, <a href="https://www.pjrc.com/store/teensy3_audio.html" target="_blank"> teensy audio adapter</a>, <a href="https://asindo.pro/products/cardimod" target="_blank">cardimod+</a>, fusion360, kicad.</p>
+					<p style='font-size: 90%;'><a href="https://www.pjrc.com/store/teensy41.html" target="_blank">teensy</a>, <a href="https://www.pjrc.com/store/teensy3_audio.html" target="_blank"> teensy audio adapter</a>, <a href="https://asindo.pro/products/cardimod" target="_blank">cardimod+</a>, <a href="https://www.autodesk.com/products/fusion-360/overview">fusion360</a>, <a href="https://www.kicad.org/">kicad</a>.</p>
 				</div>
 			</div>
 			<!-- entry -->
@@ -203,7 +228,7 @@
 					<br>video demo can be found <a href="https://youtu.be/f8CTX8Tqclg" target="_blank">here</a>.</p>
 					<br>
 					<p style="line-height: 0.25;">tools:</p>
-					<p style='font-size: 90%;'>maxmsp.</p>
+					<p style='font-size: 90%;'><a href="https://cycling74.com/products/max">max/msp</a>.</p>
 				</div>
 			</div>
 			<!-- entry -->
@@ -223,7 +248,7 @@
 					<br>video demo can be found <a href="https://youtu.be/AFi1Px7UF9E" target="_blank">here</a>.</p>
 					<br>
 					<p style="line-height: 0.25;">tools:</p>
-					<p style='font-size: 90%;'>maxmsp, mgba, obs, loopback.</p>
+					<p style='font-size: 90%;'><a href="https://cycling74.com/products/max">max/msp</a>, <a href="https://mgba.io/">mgba</a>, <a href="https://obsproject.com/">obs</a>, <a href="https://rogueamoeba.com/loopback/">loopback</a>.</p>
 				</div>
 			</div>
 			<!-- entry -->
@@ -241,7 +266,7 @@
 					<p style='font-size: 80%;'>blending binaural recordings with binaural processing.</p>
 					<br>
 					<p style="line-height: 0.25;">tools:</p>
-					<p style='font-size: 90%;'>neumann ku100, dearvr.</p>
+					<p style='font-size: 90%;'><a href="https://www.neumann.com/en-us/products/microphones/ku-100">neumann ku100</a>, <a href="https://www.sennheiser.com/en-us/immersive/dear-reality">dearvr</a> (rip ˙◠˙).</p>
 				</div>
 			</div>
 			<!-- entry -->
@@ -283,7 +308,8 @@
 						<br>can be found on github <a href='https://github.com/hytheaway/dec23-rmg' target="_blank">here</a>.</p>
 					<br>
 					<p style="line-height: 0.25;">tools:</p>
-					<p style='font-size: 90%;'>python<br>libraries: numpy, matplotlib, soundfile, pydub, IPython, tkinter.</p>
+					<p style='font-size: 90%;'><a href="https://www.python.org/">python</a>
+						<br>libraries: <a href="https://numpy.org/">numpy</a>, <a href="https://matplotlib.org/">matplotlib</a>, <a href="https://pypi.org/project/soundfile/">soundfile</a>, <a href="https://github.com/jiaaro/pydub">pydub</a>, <a href="https://ipython.org/">IPython</a>, <a href="https://docs.python.org/3/library/tkinter.html">tkinter</a>.</p>
 				</div>
 			</div>
 			<!-- entry -->
@@ -323,7 +349,8 @@
 						<br>can be found on github <a href='https://github.com/hytheaway/oct23-rmg' target="_blank">here</a>.</p>
 					<br>
 					<p style="line-height: 0.25;">tools:</p>
-					<p style='font-size: 90%;'>python.<br>libraries: numpy, scipy, pydub.</p>
+					<p style='font-size: 90%;'><a href="https://www.python.org/">python</a>.
+						<br>libraries: <a href="https://numpy.org/">numpy</a>, <a href="https://scipy.org/">scipy</a>, <a href="https://github.com/jiaaro/pydub">pydub</a>.</p>
 				</div>
 			</div>
 		</div>
