Fix bugs related to themes and mobile view

--- a/options.html
+++ b/options.html
@@ -135,6 +135,7 @@
         ['body', ['background-color', 'black']],
         ['hr', ['color', 'white']],
         ['hr:after', ['background', 'black']],
+        ['.header', ['background', 'black']],
         ['a:hover', ['color', 'black']],
         ['a:hover', ['background-color', 'white']],
         ['.dropdown-content', ['background-color', 'black']],
