--- a/projects.html
+++ b/projects.html
@@ -50,12 +50,13 @@
 			</div>
 			<hr>
 			<!-- entry -->
-			<br>
-			<div class='flex-container' style='border-bottom: 2px dashed lightgrey; flex-flow: row;'>
+			<div class='flex-container' style='border-bottom: 0.3vmin dashed lightgrey; flex-flow: row;'>
 				<div class='leftside'>
-					<img src='assets/ggamir-icon-dither.jpg' class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
-					<p style='line-height: 0.25;'>ggamir</p>
-					<p style='line-height: 1.0;'><small><i>non-homonymous with <a href="https://en.wiktionary.org/wiki/Artemisian">artemisian</a>.</i></small></p>
+					<div class="icon">
+						<img src='assets/ggamir-icon-dither.jpg' class="borderimg1class" style="min-width: 35%; max-width: 35%; max-height: 100vh; margin: auto;">
+						<p style='line-height: 0.25;'>ggamir</p>
+						<p style='line-height: 1.0;'><small><i>non-homonymous with <a href="https://en.wiktionary.org/wiki/Artemisian">artemisian</a>.</i></small></p>
+					</div>
 				</div>
 				<div class='rightside'>
 					<h2><a href='projects/ggamir.html'>ggamir (jan 2026)</a></h2>
@@ -75,12 +76,13 @@
 				</div>
 			</div>
 			<!-- entry -->
-			<br>
-			<div class='flex-container' style='border-bottom: 2px dashed lightgrey; flex-flow: row;'>
+			<div class='flex-container' style='border-bottom: 0.3vmin dashed lightgrey; flex-flow: row;'>
 				<div class='leftside'>
-					<img src='assets/image-diff-dither.png' class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
-					<p style='line-height: 0.25;'>image-diff.py</p>
-					<p style='line-height: 1.0;'><small><i>this ain't my first rodeo.</i></small></p>
+					<div class="icon">
+						<img src='assets/image-diff-dither.png' class="borderimg1class" style="min-width: 35%; max-width: 35%; max-height: 100vh; margin: auto;">
+						<p style='line-height: 0.25;'>image-diff.py</p>
+						<p style='line-height: 1.0;'><small><i>this ain't my first rodeo.</i></small></p>
+					</div>
 				</div>
 				<div class='rightside'>
 					<h2><a href='projects/image-diff.html'>image-diff.py (aug 2025)</a></h2>
@@ -98,12 +100,13 @@
 				</div>
 			</div>
 			<!-- entry -->
-			<br>
-			<div class='flex-container' style='border-bottom: 2px dashed lightgrey; flex-flow: row;'>
+			<div class='flex-container' style='border-bottom: 0.3vmin dashed lightgrey; flex-flow: row;'>
 				<div class='leftside'>
-					<img src='assets/ggec-title-dither.jpg' class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
-					<p style='line-height: 0.25;'>ggec</p>
-					<p style='line-height: 1.0;'><small><i>reinforcing my trained disdain for c.</i></small></p>
+					<div class="icon">
+						<img src='assets/ggec-title-dither.jpg' class="borderimg1class" style="min-width: 35%; max-width: 35%; max-height: 100vh; margin: auto;">
+						<p style='line-height: 0.25;'>ggec</p>
+						<p style='line-height: 1.0;'><small><i>reinforcing my trained disdain for c.</i></small></p>
+					</div>
 				</div>
 				<div class='rightside'>
 					<h2><a href='projects/ggec.html'>ggec (may 2025)</a></h2>
@@ -121,12 +124,13 @@
 				</div>
 			</div>
 			<!-- entry -->
-			<br>
-			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
+			<div class='flex-container' style='border-bottom: 0.3vmin dashed lightgrey;'>
 				<div class='leftside'>
-					<img src='assets/gghsf-dither.jpg' class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
-					<p style='line-height: 0.25;'>ggh&sf</p>
-					<p style='line-height: 1.0;'><small><i>just like ai, if ai stood for "analyzing i-hrtfs".</i></small></p>
+					<div class="icon">
+						<img src='assets/gghsf-dither.jpg' class="borderimg1class" style="min-width: 35%; max-width: 35%; max-height: 100vh; margin: auto;">
+						<p style='line-height: 0.25;'>ggh&sf</p>
+						<p style='line-height: 1.0;'><small><i>just like ai, if ai stood for "analyzing i-hrtfs".</i></small></p>
+					</div>
 				</div>
 				<div class='rightside'>
 					<h2><a href='projects/gghsf.html'>ggh&sf (may 2025)</a></h2>
@@ -147,12 +151,13 @@
 				</div>
 			</div>
 			<!-- entry -->
-			<br>
-			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
+			<div class='flex-container' style='border-bottom: 0.3vmin dashed lightgrey;'>
 				<div class='leftside'>
-					<img src='assets/m3--_fully_working-dither.jpg' class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
-					<p style='line-height: 0.25;'>m3--</p>
-					<p style='line-height: 1.0;'><small><i>aoifernet is a cuter name.</i></small></p>
+					<div class="icon">
+						<img src='assets/m3--_fully_working-dither.jpg' class="borderimg1class" style="min-width: 35%; max-width: 35%; max-height: 100vh; margin: auto;">
+						<p style='line-height: 0.25;'>m3--</p>
+						<p style='line-height: 1.0;'><small><i>aoifernet is a cuter name.</i></small></p>
+					</div>
 				</div>
 				<div class='rightside'>
 					<h2><a href='projects/aoifernet.html'>m3-- (dec 2024)</a></h2>
@@ -166,12 +171,13 @@
 				</div>
 			</div>
 			<!-- entry -->
-			<br>
-			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
+			<div class='flex-container' style='border-bottom: 0.3vmin dashed lightgrey;'>
 				<div class='leftside'>
-					<img src='assets/ggm-dither.jpg' class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
-					<p style='line-height: 0.25;'>ggm&scnbrmwaa</p>
-					<p style='line-height: 1.0;'><small><i>exactly what it sounds like.</i></small></p>
+					<div class="icon">
+						<img src='assets/ggm-dither.jpg' class="borderimg1class" style="min-width: 35%; max-width: 35%; max-height: 100vh; margin: auto;">
+						<p style='line-height: 0.25;'>ggm&scnbrmwaa</p>
+						<p style='line-height: 1.0;'><small><i>exactly what it sounds like.</i></small></p>
+					</div>
 				</div>
 				<div class='rightside'>
 					<h2><a href='aftw/aftw-final/index.html'>ggm&scnbrmwaa (dec 2024)</a></h2>
@@ -189,12 +195,13 @@
 				</div>
 			</div>
 			<!-- entry -->
-			<br>
-			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
+			<div class='flex-container' style='border-bottom: 0.3vmin dashed lightgrey;'>
 				<div class='leftside'>
-					<img src='assets/height_layer_comparison-dither.jpg' class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
-					<p style='line-height: 0.25;'>height layer comparison</p>
-					<p style='line-height: 1.0;'><small><i>what kind of monster takes the screws out of a d sub?</i></small></p>
+					<div class="icon">
+						<img src='assets/height_layer_comparison-dither.jpg' class="borderimg1class" style="min-width: 35%; max-width: 35%; max-height: 100vh; margin: auto;">
+						<p style='line-height: 0.25;'>height layer comparison</p>
+						<p style='line-height: 1.0;'><small><i>what kind of monster takes the screws out of a d sub?</i></small></p>
+					</div>
 				</div>
 				<div class='rightside'>
 					<h2><a href='projects/height-layer.html'>height layer comparison (apr 2024)</a></h2>
@@ -212,12 +219,13 @@
 				</div>
 			</div>
 			<!-- entry -->
-			<br>
-			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
+			<div class='flex-container' style='border-bottom: 0.3vmin dashed lightgrey;'>
 				<div class='leftside'>
-					<img src='assets/fourierifier-dither.jpg' class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
-					<p style='line-height: 0.25;'>fourierifier</p>
-					<p style='line-height: 1.0;'><small><i>like a guitar pedal for making all your music good.</i></small></p>
+					<div class="icon">
+						<img src='assets/fourierifier-dither.jpg' class="borderimg1class" style="min-width: 35%; max-width: 35%; max-height: 100vh; margin: auto;">
+						<p style='line-height: 0.25;'>fourierifier</p>
+						<p style='line-height: 1.0;'><small><i>like a guitar pedal for making all your music good.</i></small></p>
+					</div>
 				</div>
 				<div class='rightside'>
 					<h2><a href='projects/fourierifier.html'>fourierifier (apr 2024)</a></h2>
@@ -232,12 +240,13 @@
 				</div>
 			</div>
 			<!-- entry -->
-			<br>
-			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
+			<div class='flex-container' style='border-bottom: 0.3vmin dashed lightgrey;'>
 				<div class='leftside'>
-					<img src='assets/pkmnMaxMSP-dither.jpg' class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
-					<p style='line-height: 0.25;'>pkmnMaxMSP</p>
-					<p style='line-height: 1.0;'><small><i>making noise music fun for once.</i></small></p>
+					<div class="icon">
+						<img src='assets/pkmnMaxMSP-dither.jpg' class="borderimg1class" style="min-width: 35%; max-width: 35%; max-height: 100vh; margin: auto;">
+						<p style='line-height: 0.25;'>pkmnMaxMSP</p>
+						<p style='line-height: 1.0;'><small><i>making noise music fun for once.</i></small></p>
+					</div>
 				</div>
 				<div class='rightside'>
 					<h2><a href='projects/pkmnmaxmsp.html'>pkmnMaxMSP (mar 2024)</a></h2>
@@ -252,12 +261,13 @@
 				</div>
 			</div>
 			<!-- entry -->
-			<br>
-			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
+			<div class='flex-container' style='border-bottom: 0.3vmin dashed lightgrey;'>
 				<div class='leftside'>
-					<img src='assets/danse-ku100glasses-dither.jpg' class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
-					<p style='line-height: 0.25;'>binaural objects</p>
-					<p style='line-height: 1.0;'><small><i>so, yes head?</i></small></p>
+					<div class="icon">
+						<img src='assets/danse-ku100glasses-dither.jpg' class="borderimg1class" style="min-width: 35%; max-width: 35%; max-height: 100vh; margin: auto;">
+						<p style='line-height: 0.25;'>binaural objects</p>
+						<p style='line-height: 1.0;'><small><i>so, yes head?</i></small></p>
+					</div>
 				</div>
 				<div class='rightside'>
 					<h2><a href='projects/binauralobjectsfeb24.html'>binaural objects (feb 2024)</a></h2>
@@ -270,12 +280,13 @@
 				</div>
 			</div>
 			<!-- entry -->
-			<br>
-			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
+			<div class='flex-container' style='border-bottom: 0.3vmin dashed lightgrey;'>
 				<div class='leftside'>
-					<img src='assets/cerial-ver2-dither.jpg' class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
-					<p style='line-height: 0.25;'>cerial ver. 2</p>
-					<p style='line-height: 1.0;'><small><i>do not mind the scattered energy drinks.</i></small></p>
+					<div class="icon">
+						<img src='assets/cerial-ver2-dither.jpg' class="borderimg1class" style="min-width: 35%; max-width: 35%; max-height: 100vh; margin: auto;">
+						<p style='line-height: 0.25;'>cerial ver. 2</p>
+						<p style='line-height: 1.0;'><small><i>do not mind the scattered energy drinks.</i></small></p>
+					</div>
 				</div>
 				<div class='rightside'>
 					<h2><a href='projects/cerialv2.html'>cerial ver. 2 (dec 2023)</a></h2>
@@ -291,12 +302,12 @@
 				</div>
 			</div>
 			<!-- entry -->
-			<br>
-			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
+			<div class='flex-container' style='border-bottom: 0.3vmin dashed lightgrey;'>
 				<div class='leftside'>
-					<br>
-					<img src='assets/python-logo-dither.jpg' class="borderimg1class" style="max-width: 25%; max-height: 100vh; margin: auto;">
-					<p style="line-height: 0.25;">rmg (dec 2023)</p>
+					<div class="icon">
+						<img src='assets/python-logo-dither.jpg' class="borderimg1class" style="min-width: 35%; max-width: 25%; max-height: 100vh; margin: auto;">
+						<p style="line-height: 0.25;">rmg (dec 2023)</p>
+					</div>
 				</div>
 				<div class='rightside'>
 					<h2>rmg (dec 2023)</h2>
@@ -313,12 +324,13 @@
 				</div>
 			</div>
 			<!-- entry -->
-			<br>
-			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
+			<div class='flex-container' style='border-bottom: 0.3vmin dashed lightgrey;'>
 				<div class='leftside'>
-					<img src='assets/cerial-ver1-dither.jpg' class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
-					<p style='line-height: 0.25;'>cerial ver. 1</p>
-					<p style='line-height: 1.0;'><small><i>the tupperware was cleaned before use.</i></small></p>
+					<div class="icon">
+						<img src='assets/cerial-ver1-dither.jpg' class="borderimg1class" style="min-width: 35%; max-width: 35%; max-height: 100vh; margin: auto;">
+						<p style='line-height: 0.25;'>cerial ver. 1</p>
+						<p style='line-height: 1.0;'><small><i>the tupperware was cleaned before use.</i></small></p>
+					</div>
 				</div>
 				<div class='rightside'>
 					<h2>cerial ver. 1 (nov 2023)</h2>
@@ -333,12 +345,12 @@
 				</div>
 			</div>
 			<!-- entry -->
-			<br>
 			<div class='flex-container'>
 				<div class='leftside'>
-					<br>
-					<img src="assets/python-logo-dither.jpg" class="borderimg1class" style="max-width: 25%; max-height: 100vh; margin: auto;">
-					<p style="line-height: 0.25;">rmg (oct 2023)</p>
+					<div class="icon">
+						<img src="assets/python-logo-dither.jpg" class="borderimg1class" style="min-width: 35%; max-width: 25%; max-height: 100vh; margin: auto;">
+						<p style="line-height: 0.25;">rmg (oct 2023)</p>
+					</div>
 				</div>
 				<div class="rightside">
 					<h2>rmg (oct 2023)</h2>
@@ -388,3 +400,20 @@
 	let str_stored_theme_key = sessionStorage.getItem("selected_theme_key");
 	setTheme(str_stored_theme_key, {r:142,g:142,b:142,a:255}, {r:255,g:0,b:255,a:0.2});
 </script>
+
+<style>
+	@media only screen and (max-width: 800px){
+		.flex-container {
+			padding-bottom: 2vmin;
+		}
+	}
+	.flex-container {
+		padding-top: 2vmin;
+	}
+	.leftside {
+		display: flex; 
+		flex-direction: column; 
+		align-content: center; 
+		justify-content: center;
+	}
+</style>
