Replace static font size adjustment with relative

--- a/journal.html
+++ b/journal.html
@@ -66,7 +66,7 @@
 					<h3 style="text-align: left;">i use ████, btw (dec 2025)</h3>
 					<div class="flex-container">
 						<div class="leftside" style="text-align: left;">
-							<p style="font-size: 90%; letter-spacing: -0.1px;">
+							<p style="font-size: 90%; letter-spacing: -0.01vmin;">
 								<span style="display: inline; font-size: 70%;">
 									<i>
 										i initially wrote this piece at the end of 2025, but held off on publishing it because i felt there was more for me to learn before putting my opinion on paper.
@@ -97,14 +97,14 @@
 								<li style="display: list-item;">create a ████ partition (3gb if you're crazy like me) and a ████ partition (everything else)</li>
 								<li style="display: list-item;">install some ██████████ (grub) onto the ████ partition and install ████ onto the ████ partition</li>
 							</ol>
-							<p style="font-size: 90%; letter-spacing: -0.1px;">
+							<p style="font-size: 90%; letter-spacing: -0.01vmin;">
 								that's literally it. at its core, installing ████ is no more difficult than installing anything else. i've had significantly more trouble installing laravel than this. so, why do so many people say it's so difficult?
 							</p>
 						</div>
 					</div>
 					<div class="flex-container">
 						<div class="leftside" style="text-align: left;">
-							<p style="font-size: 90%; letter-spacing: -0.1px;">
+							<p style="font-size: 90%; letter-spacing: -0.01vmin;">
 								in my opinion, there are a few reasons. the official guide is <u>dense</u> with largely extraneous information, making it incredibly easy to ignore footnotes that <i>do</i> apply to you, simply because all the other ones that look identical don't.
 								<br>
 								<br>the guide also frequently hands critical information off to very technical documentation. for example, the █████ ████ that ███ ████ to ████████ a ███████ ██████ of ████ ████ and ████ to ██████ ███ on ███ ████ ███████ █████ as ████████ ████ about █████████ ████████ ███████████ is █████ and ███████. additionally, ███████ ███████, so...
