Fix link wrap issue

--- a/huh/somewhereelse.html
+++ b/huh/somewhereelse.html
@@ -106,6 +106,7 @@
         }
         td {
             border: 0.3vmin solid !important;
+            overflow-wrap: break-word;
         }
     }
     table {
