--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 						<span class="dropbutton"><a href="">more</a></span>
 						<div class="dropdown-content">
 							<a href="options.html">options</a>
+							<a href="/huh/softwareiuse.html">software i use</a>
 							<a href="/huh/somewhereelse.html">somewhere else</a>
 						</div>
 					</div>
@@ -75,7 +76,7 @@
 		handmade by <a href="me.html">garrett</a>. | this <a href="https://motherfuckingwebsite.com/" target="_">website</a> is designed to be viewed on desktop with the <a href="https://www.firefox.com/" target="_">firefox</a> browser.
 		<br>
 		<br><a href="https://justinjackson.ca/webmaster/" target="_">created</a> 13 dec 2023. | last updated:
-		<span id="lastUpdateDate" style="display: initial;">09 jan 2026</span>.
+		<span id="lastUpdateDate" style="display: initial;">14 jan 2026</span>.
 	</footer>
 
 </body>
