--- a/404.html
+++ b/404.html
@@ -42,6 +42,7 @@
 						<span class="dropbutton"><a href="">more</a></span>
 						<div class="dropdown-content">
 							<a href="https://hytheaway.github.io/options.html">options</a>
+                            <a href="https://hytheaway.github.io/huh/softwareiuse.html">software i use</a>
                             <a href="https://hytheaway.github.io/huh/somewhereelse.html">somewhere else</a>
 						</div>
 					</div>
