--- a/fav-music/index.html
+++ b/fav-music/index.html
@@ -40,6 +40,7 @@
 						<span class="dropbutton"><a href="">more</a></span>
 						<div class="dropdown-content">
 							<a href="../options.html">options</a>
+                            <a href="../huh/softwareiuse.html">software i use</a>
                             <a href="../huh/somewhereelse.html">somewhere else</a>
 						</div>
 					</div>
