--- a/huh/somewhereelse.html
+++ b/huh/somewhereelse.html
@@ -42,6 +42,7 @@
 						<span class="dropbutton"><a href="">more</a></span>
 						<div class="dropdown-content">
 							<a href="../options.html">options</a>
+                            <a href="softwareiuse.html">software i use</a>
                             <a href="somewhereelse.html">somewhere else</a>
 						</div>
 					</div>
